force-app/main/default/objects/Integration_Config__mdt/fields/Integration_Service__c.field-meta.xml
<CustomField>
    <fullName>Integration_Service__c</fullName>
    <label>Integration Service</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>