force-app/main/default/objects/Integration_Config__mdt/fields/Max_Attempts_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Max_Attempts_Allowed__c</fullName>
    <description>(If retry allowed),</description>
    <label>Max Attempts Allowed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>