force-app/main/default/objects/Integration_Config__mdt/fields/Supported_Categories__c.field-meta.xml
<CustomField>
    <fullName>Supported_Categories__c</fullName>
    <description>Separated by semicolon, and no spaces anywhere</description>
    <label>Supported Categories</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>